[tool.poetry]
name = "hrvtrt"
version = "0.1.0"
description = "Exploring heart rate variability related FC gradient"
authors = ["Hao-Ting Wang <htwangtw@gmail.com>"]
license = "Apache2.0"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "~1.2"
numpy = "~1.16"
nibabel = "^3.2.1"
nilearn = "^0.7.0"
boto3 = "^1.17.33"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "*"
flake8 = "*"
black = "*"
datalad = "^0.14"
sphinx = "*"
ipython = "^7.21"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=1.14"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
^/(
  (
      \.eggs
    | \.git*
    | \.datalad
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
  | setup.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''